fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
 
 body {
-  background-color: rgb(129, 121, 123);
+  background-color: rgb(255, 255, 255);
 }
